# SuctionCup_control

./: README.md
suction_control/: CMakeLists.txt  package.xml
suction_control/include/suction_control/: suction_server.h
suction_control/launch/: suction_cup.launch
suction_control/src/: suction_server.cpp
suction_control/srv/: Suction.srv
